[UI] Datagrid Overflow Icon Fix
Fixes: #924

Tested on: Chrome, Firefox, Safari, IE11, Edge

--- a/src/clarity-angular/data/datagrid/_datagrid.clarity.scss
+++ b/src/clarity-angular/data/datagrid/_datagrid.clarity.scss
@@ -502,6 +502,11 @@
                         background: none;
                         box-shadow: none;
                     }
+
+                    clr-icon {
+                        vertical-align: middle;
+                        transform: translate3d(0px, -1px, 0);
+                    }
                 }
             }
 
